--- a/src/0/a.html
+++ b/src/0/a.html
@@ -10,4 +10,4 @@ Height: <input id=input_height value=16 style=width:64px>
 Scale factor: <input id=input_scaleFactor value=8 style=width:64px>
 <button id=button_generate>Generate</button>
 <div id=div_output></div>
-<script src=https://cdn.rawgit.com/anliting/module/c375517e8c4f68285a6f7926aa4ea7de85bcfc6f/src/module.js data-main=../mazeGenerator/mazeGenerator.js async></script>
+<script src=https://cdn.rawgit.com/anliting/module/c375517e8c4f68285a6f7926aa4ea7de85bcfc6f/src/module.js data-main=a.js async></script>
