--- a/src/0/a.html
+++ b/src/0/a.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<meta name=viewport content='width=device-width,initial-scale=1'>
 <title>Test 0</title>
 <body>
 Style: <select id="select_style">
